infrastructure/01-system/trivy/manifests/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: trivy-operator-egress
  namespace: trivy-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: trivy-operator
  egress:
    # 1. Kubernetes API access
    - toEntities:
        - kube-apiserver
    # 2. DNS Resolution
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    # 3. Access to image registries and vulnerability DBs
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
